--- a/ZKT.ini
+++ b/ZKT.ini
@@ -1,6 +1,7 @@
 Param,Value
 IPV4AddressServer,192.168.5.40:8098
 TimeOutButtonNormalOpen,300
+SecsIntervalForLockInNormallyOpen, 240
 DelayRouteOpenGaraje_Secs,20
 DelayRouteCloseGaraje_Secs,20
 WatchDog_Server_Secs,30
